chore(upgrade): upgrading everything and adding kate theme

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -107,6 +107,7 @@ wheel_scroll_multiplier 5.0
 touch_scroll_multiplier 5.0
 scrollback_pager_history_size 2.0 
 
+confirm_os_window_close 0
 enable_audio_bell no
 mouse_hide_wait -1
 focus_follows_mouse yes
