style(firefox): tweaking sidebar width and updating neovim

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -99,7 +99,6 @@ allow_remote_control yes
 listen_on unix:@mykitty
 
 repaint_delay 6
-input_delay 2
 sync_to_monitor yes
 
 # On Wayland, touch scroll is also used for mice
@@ -116,7 +115,7 @@ url_style single
 strip_trailing_spaces smart
 select_by_word_characters @-./_~?&=%+#
 
-editor nvim
+editor vim
 
 # nvim scrollback pager, redit to page-down on GitHub:
 # https://github.com/kovidgoyal/kitty/issues/719#issuecomment-952039731
@@ -137,25 +136,13 @@ map kitty_mod+f6 debug_config
 # Layout management
 
 map kitty_mod+w>o next_layout
-map kitty_mod+w>i last_used_layout
 map kitty_mod+w>a layout_action increase_num_full_size_windows
 map kitty_mod+w>x layout_action decrease_num_full_size_windows
-map kitty_mod+w>] layout_action increase_num_full_size_windows
-map kitty_mod+w>[ layout_action decrease_num_full_size_windows
-
-map kitty_mod+w>kitty_mod+o layout_action next_layout
-map kitty_mod+w>kitty_mod+i layout_action last_used_layout
-map kitty_mod+w>kitty_mod+a layout_action increase_num_full_size_windows
-map kitty_mod+w>kitty_mod+x layout_action decrease_num_full_size_windows
-map kitty_mod+w>kitty_mod+] layout_action increase_num_full_size_windows
-map kitty_mod+w>kitty_mod+[ layout_action decrease_num_full_size_windows
 
 # Window management
 
-# W prefix key
 map kitty_mod+w>w nth_window -1
 map kitty_mod+w>n new_window_with_cwd
-map kitty_mod+w>N new_window_with_cwd
 map kitty_mod+w>s launch --cwd=current --location=hsplit
 map kitty_mod+w>v launch --cwd=current --location=vsplit
 
@@ -175,47 +162,16 @@ map kitty_mod+w>equal reset_window_sizes
 
 map kitty_mod+w>c close_window
 
-# W prefix key held
-
-map kitty_mod+w>kitty_mod+w nth_window -1
-map kitty_mod+w>kitty_mod+n new_window_with_cwd
-map kitty_mod+w>kitty_mod+N new_window_with_cwd
-map kitty_mod+w>kitty_mod+s launch --cwd current --location hsplit
-map kitty_mod+w>kitty_mod+v launch --cwd current --location vsplit
-map kitty_mod+w>kitty_mod+h neighboring_window left
-map kitty_mod+w>kitty_mod+j neighboring_window bottom
-map kitty_mod+w>kitty_mod+k neighboring_window top
-map kitty_mod+w>kitty_mod+l neighboring_window right
-map kitty_mod+w>kitty_mod+r>kitty_mod+h resize_window narrower 20
-map kitty_mod+w>kitty_mod+r>kitty_mod+l resize_window wider 20
-map kitty_mod+w>kitty_mod+r>kitty_mod+k resize_window taller 20
-map kitty_mod+w>kitty_mod+r>kitty_mod+j resize_window shorter 20
-map kitty_mod+w>kitty_mod+r>kitty_mod+r start_resizing_window
-map kitty_mod+w>kitty_mod+equal reset_window_sizes
-map kitty_mod+w>kitty_mod+c close_window
-
 # Tab navigation
 
 map kitty_mod+t>c close_tab
-map kitty_mod+t>kitty_mod+c close_tab
 map kitty_mod+t>n new_tab !neighbor
-map kitty_mod+t>kitty_mod+n new_tab !neighbor
 map kitty_mod+t>t goto_tab -1
-map kitty_mod+t>kitty_mod+t goto_tab -1
 map kitty_mod+t>h previous_tab
-map kitty_mod+t>kitty_mod+h previous_tab
 map kitty_mod+t>l next_tab
-map kitty_mod+t>kitty_mod+l next_tab
 map kitty_mod+t>r set_tab_title
-map kitty_mod+t>kitty_mod+r set_tab_title
 map kitty_mod+t>j move_tab_backward
-map kitty_mod+t>kitty_mod+j move_tab_backward
 map kitty_mod+t>k move_tab_forward
-map kitty_mod+t>kitty_mod+k move_tab_forward
-map kitty_mod+alt+t>h move_tab_backward
-map kitty_mod+alt+t>kitty_mod+alt+h move_tab_backward
-map kitty_mod+alt+t>l move_tab_forward
-map kitty_mod+alt+t>kitty_mod+alt+l move_tab_forward
 
 # Seamless nvim <-> kitty navigation
 
@@ -223,17 +179,6 @@ map ctrl+h kitten pass_keys.py neighboring_window left ctrl+h
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten pass_keys.py neighboring_window top ctrl+k
 map ctrl+l kitten pass_keys.py neighboring_window right ctrl+l
-
-# Scrolling
-
-map kitty_mod+alt+k scroll_page_up
-map kitty_mod+alt+j scroll_page_down
-
-map kitty_mod+u scroll_page_up
-map kitty_mod+d scroll_page_down
-
-map kitty_mod+alt+up scroll_page_up
-map kitty_mod+alt+down scroll_page_down
 
 #
 # Remapping overlapping defaults
