--- a/config/intercept/keyboard.yaml
+++ b/config/intercept/keyboard.yaml
@@ -2,6 +2,8 @@ MAPPINGS:
   - KEY: KEY_CAPSLOCK
     TAP: KEY_ESC
     HOLD: KEY_LEFTCTRL
+    HOLD_START: BEFORE_CONSUME
   - KEY: KEY_ESC
     TAP: KEY_GRAVE
-    HOLD: KEY_ESC
+    HOLD: KEY_CAPSLOCK
+    HOLD_START: BEFORE_CONSUME
