feat(nvim): Adding key maps for opening a temporary copy in new buffer/terminal.

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -102,16 +102,13 @@ inactive_tab_font_style normal
 # General
 term xterm-kitty
 editor vim
+shell_integration disabled
 allow_remote_control yes
 listen_on unix:@mykitty
 confirm_os_window_close 0
 enable_audio_bell no
 mouse_hide_wait -1
 focus_follows_mouse yes
-
-# Rendering
-repaint_delay 6
-sync_to_monitor yes
 
 # Resize in greater steps
 window_resize_step_cells 20
