chore: refactor and reorganize

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -22,7 +22,8 @@
 include ./themes/catppuccin-mocha.conf
 
 #
-# Font (desktop license from https://fsd.it/shop/fonts/pragmatapro/)
+# Font
+#   Desktop license from: https://fsd.it/shop/fonts/pragmatapro
 #
 
 font_family PragmataPro Mono Liga Regular
@@ -31,7 +32,7 @@ italic_font PragmataPro Mono Liga Italic
 bold_italic_font PragmataPro Mono Liga Bold Italic
 font_size 10
 
-# Increase line height since PragmataPro Mono itself has no line spacing
+# Increase line height since PragmataPro Mono has no line spacing
 
 adjust_line_height 140%
 
@@ -75,6 +76,7 @@ dynamic_background_opacity no
 #
 
 # More subtle tab bar
+
 active_tab_foreground #CDD6F4
 active_tab_background #1E1E2E
 inactive_tab_foreground #a6adc8
@@ -82,16 +84,19 @@ inactive_tab_background #1E1E2E
 tab_bar_background none
 
 # Style
+
 tab_bar_style separator
 tab_bar_margin_height 7.0 0.0
 tab_bar_margin_width 5.0
 
 # Formats
+
 tab_separator             "·"
 tab_title_template        " {title} "
 active_tab_title_template " {fmt.bold}{title}{fmt.nobold} "
 
 # Font
+
 active_tab_font_style normal
 inactive_tab_font_style normal
 
@@ -100,49 +105,71 @@ inactive_tab_font_style normal
 #
 
 # General
+
 term xterm-kitty
 editor vim
 shell_integration disabled
 allow_remote_control yes
 listen_on unix:@mykitty
+
+# Behavior
+
 confirm_os_window_close 0
+copy_on_select yes
 enable_audio_bell no
-mouse_hide_wait -1
 focus_follows_mouse yes
+mouse_hide_wait -1
 
 # Resize in greater steps
+
 window_resize_step_cells 20
 window_resize_step_lines 20
 
 # Layouts to enable by default
+
 enabled_layouts horizontal,vertical,tall,grid
 
-# NOTE: On Wayland, touch scroll is also used for mice
+# Scrolling
+#   NOTE: On Wayland, touch scroll is also used for mice
+
 wheel_scroll_multiplier 5.0
 touch_scroll_multiplier 5.0
-scrollback_pager_history_size 2.0 
 
 # URLs
+
 url_style single
 strip_trailing_spaces smart
 select_by_word_characters @-./_~?&=%+#
 
 
-# nvim scrollback pager, credit to page-down on GitHub:
-# https://github.com/kovidgoyal/kitty/issues/719#issuecomment-952039731
+# nvim scrollback pager, credit to page-down on GitHub.
+#   See: https://github.com/kovidgoyal/kitty/issues/719#issuecomment-952039731
 scrollback_pager bash -c "exec nvim 63<&0 0</dev/null -c 'map <silent> q :qa!<CR>' -c 'set shell=bash scrollback=100000 termguicolors laststatus=2' -c 'autocmd TermEnter * stopinsert' -c 'autocmd TermClose * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)' -c 'terminal sed </dev/fd/63 -e \"s/'$'\x1b'']8;;file:[^\]*[\]//g\" && sleep 0.01 && printf \"'$'\x1b'']2;\"'"
 
 #
 # KEY MAPS
 #
 
+# Unmap defaults
+
+clear_all_shortcuts yes
+
+# Remap defaults
+
+map kitty_mod+c copy_to_clipboard
+map kitty_mod+v paste_from_clipboard
+map kitty_mod+equal change_font_size current +1.0
+map kitty_mod+plus change_font_size current +1.0
+map kitty_mod+minus change_font_size current -1.0
+map kitty_mod+0 change_font_size current 0
+map kitty_mod+u kitten unicode_input
+
 # Config
 
+map f1 launch firefox https://sw.kovidgoyal.net/kitty
+map f2 set_tab_title
 map f5 load_config_file /etc/nixos/config/kitty/config.conf
-map kitty_mod+f1 launch firefox https://sw.kovidgoyal.net/kitty
-map kitty_mod+f2 set_tab_title
-map kitty_mod+f5 load_config_file
-map kitty_mod+f6 debug_config
+map f6 debug_config
 
 # Layout management
 
