chore: nvim updates and refactors

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -1,15 +1,15 @@
-#
+##
 # KITTY CONFIGURATION
 #
 # Author: Daniel Nordstrom <d@mrnordstrom.com>
 # Repository: https://github.com/dnordstrom/dotfiles
 #
 # See:
-#   - Overview: https://sw.kovidgoyal.net/kitty/overview/
-#   - Options: https://sw.kovidgoyal.net/kitty/conf/
-#   - Actions: https://sw.kovidgoyal.net/kitty/actions/
+#   - Overview: https://sw.kovidgoyal.net/kitty/overview
+#   - Options: https://sw.kovidgoyal.net/kitty/conf
+#   - Actions: https://sw.kovidgoyal.net/kitty/actions
 #   - Default: https://sw.kovidgoyal.net/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
-#
+##
 
 #
 # APPEARANCE
@@ -173,7 +173,8 @@ map f6 debug_config
 
 # Layout management
 
-map kitty_mod+w>o next_layout
+map kitty_mod+w>i next_layout
+map kitty_mod+w>o layout_action rotate
 map kitty_mod+w>a layout_action increase_num_full_size_windows
 map kitty_mod+w>x layout_action decrease_num_full_size_windows
 
