refactor: everything from nvim to foot and back to nvim

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -14,8 +14,13 @@ title=foot
 #
 
 font=PragmataPro Mono Liga:size=10
-line-height=18px
+font-bold=PragmataPro Mono Liga:weight=bold:size=10
+font-italic=PragmataPro Mono Liga:slant=italic:size=10
+font-bold-italic=PragmataPro Mono Liga:weight=bold:slant=italic:size=10
+line-height=22px
 pad=18x14
+dpi-aware=no
+vertical-letter-offset=2
 
 #
 # CURSOR
