feat(wm): setting up systemd for both river and sway

--- a/config/sway/main.conf
+++ b/config/sway/main.conf
@@ -562,9 +562,11 @@ bindsym $mod+Backspace mode "$mode_system"
 # Status bar
 #
 
-bar {
-  swaybar_command waybar --config "$HOME/.config/waybar/sway.json" 2> "$HOME/.local/share/logs/waybar.sway.log"
-}
+# We're using systemd instead of this:
+#
+# bar {
+#   swaybar_command waybar --config "$HOME/.config/waybar/sway.json" 2> "$HOME/.local/share/logs/waybar.sway.log"
+# }
 
 #
 # WINDOW ASSIGNMENTS
