feat(wm): setting up systemd for both river and sway

--- a/config/sway/main.conf
+++ b/config/sway/main.conf
@@ -734,13 +734,15 @@ exec_always {
 # SYSTEMD & DBUS
 #
 
-exec {
-  dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP && \
-  systemctl --user start sway-session.target
-}
+# This is handled by Home Manager, otherwise uncomment:
+#
+# exec {
+#   dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP && \
+#   systemctl --user start sway-session.target
+# }
 
 #
 # INCLUDES
 #
 
-include colors.$colors
+include $colors.conf
