refactor: eww config refactoring and some nvim tweakerino

--- a/config/sway/main.conf
+++ b/config/sway/main.conf
@@ -19,8 +19,8 @@ set {
   $fontpango "pango:Input Sans Condensed $fontsize"
 
   $colors "catppuccin"
-  $theme "Catppuccin-yellow"
-  $cursor-theme "Catppuccin-Teal-Cursors"
+  $theme "Catppuccin-Latte-Peach"
+  $cursor-theme "Quintom_Snow"
   $icon-theme "Vimix-dark"
 
   $termweatherwidth 920
