chore: pruning nvim config

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -19,7 +19,7 @@
 # Theme
 #
 
-include ./themes/catppuccin-mocha.conf
+include ./themes/catppuccin-latte.conf
 
 #
 # Font
@@ -62,7 +62,7 @@ inactive_border_color #F9E2AF
 
 # Background and opacity (dynamic unneeded, disabled for better performance)
 
-background_opacity 0.98
+background_opacity 0.96
 dynamic_background_opacity no
 
 #
@@ -77,23 +77,26 @@ dynamic_background_opacity no
 
 # More subtle tab bar
 
-active_tab_foreground #CDD6F4
-active_tab_background #1E1E2E
-inactive_tab_foreground #a6adc8
-inactive_tab_background #1E1E2E
+# active_tab_foreground #CDD6F4
+# active_tab_background #1E1E2E
+# inactive_tab_foreground #a6adc8
+# inactive_tab_background #1E1E2E
 tab_bar_background none
 
 # Style
 
+tab_bar_edge bottom
 tab_bar_style separator
+tab_powerline_style round
+tab_bar_align center
 tab_bar_margin_height 7.0 0.0
 tab_bar_margin_width 5.0
 
 # Formats
 
-tab_separator             "·"
-tab_title_template        " {title} "
-active_tab_title_template " {fmt.bold}{title}{fmt.nobold} "
+tab_separator             ""
+tab_title_template        "{fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg.tab}{fmt.fg.tab} {title} {fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.fg.tab}{fmt.bg.tab}"
+active_tab_title_template "{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.fg.tab}{fmt.bg.tab}{fmt.bold} {title} {fmt.nobold}{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg._EFF1F5}{fmt.fg.tab}{fmt.bg.tab}"
 
 # Font
 
