fix: nvim plugin changes. disk labels, and bat theemes

--- a/config/sway/main.conf
+++ b/config/sway/main.conf
@@ -734,7 +734,7 @@ exec_always {
 # SYSTEMD & DBUS
 #
 
-# This is handled by Home Manager, otherwise uncomment:
+# This is handled by Home Manager since we enable systemd integration for Sway:
 #
 # exec {
 #   dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP && \
